Fix for vertAlign - kind of

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,6 +11,10 @@ a {
 #login {
     position: absolute;
 }
+
+#timer {
+    position: absolute;
+}
 /*
 * {
     border: 2px solid black;
@@ -19,4 +23,8 @@ a {
 
 .min400 {
 	min-width: 400px
+}
+
+* {
+    border: 2px auto;
 }
